# WildWolf_ICRA

./: README.md  qweqr.txt
RL/: blackboard_new.cpp  demo.py  error.md  kernal (copy).py  kernal.py  rmaics.py  rmaics_ROS.py  rmaics_ROS_fb.py  train.py
RL/docs/: record_player.md
RL/elegantrl/: agent.py  net.py  replay.py  run.py
ZMQ_test/: CMakeLists.txt  ZMQ_server.cpp  package.xml
armor_detection/: CMakeLists.txt  armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.hpp  index.html  package.xml
armor_detection/armor_detection/: armor_detection_client.cpp  armor_detection_node.cpp  armor_detection_node.hpp
armor_detection/armor_detection/basic_armor/: basic_armor.hpp
armor_detection/armor_detection/basic_pnp/: abstract_pnp.hpp
armor_detection/armor_detection/configs/angle_solve/: basic_pnp_config.xml
armor_detection/armor_detection/configs/armor/: basic_armor_config.xml
armor_detection/basic_armor/: basic_armor.cpp  basic_armor.hpp
armor_detection/basic_pnp/: abstract_pnp.hpp
armor_detection/configs/: armor_detection_node.prototxt
armor_detection/configs/angle_solve/: basic_pnp_config.xml
armor_detection/configs/armor/: basic_armor_config.xml
armor_detection/mv_video_capture/: mv_video_capture.cpp
armor_detection/proto/: armor_detection.pb.cc  armor_detection.pb.h  armor_detection.proto
icra_robomaster_emulator/: CMakeLists.txt  urdf.rviz
icra_robomaster_emulator/launch/: Planning_test.launch  decision_test.launch  gmapping.launch  gmapping_test.launch  localization.launch  mapping.launch  slam_gmapping.xml  test.launch  test1.launch  test2.launch  test_finish.launch  transform_red1.launch  world.launch
icra_robomaster_emulator/map/: RMUA.pgm  RMUA.yaml  RMUA_2020.pgm  RMUA_2020.yaml  b3-4.pgm  b3-4.yaml  b3_4_fin.pgm  b3_4_fin.yaml  b3_4_finish.pgm  b3_4_finish.yaml  icra.pgm  icra.yaml  icra2019.yaml
icra_robomaster_emulator/rviz/: red1.rviz
icra_robomaster_emulator/worlds/: ICRA_2022.world  RMUA_2020.world  RMUA_WithCamera.world
ira_laser_tools/launch/: laserscan_multi_merger.launch  laserscan_virtualizer.launch
laser_detection/scripts/: debug_detection.py
laser_detection/src/: laser_save.cpp
laser_filters/: REDAME.md
laser_filters-noetic-devel/: .laser_filters_plugins.xml.swp
laser_filters-noetic-devel/examples/: my_robot_laser_filters.yaml
laser_filters-noetic-devel/src/: scan_to_scan_filter_chain.cpp
laser_filters-noetic-devel/test/: test_laser_filter.launch
laser_filters/examples/: my_robot_laser_filters.yaml
laser_filters/src/: scan_to_scan_filter_chain.cpp
laser_filters/test/: test_laser_filter.launch
roborts_base/: roborts_base_config.h
roborts_base/config/: base.yaml
roborts_base/include/: chassis.h  gimbal.h
roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp
roborts_bringup/launch/: base.launch  mapping.launch  mapping_stage.launch  roborts.launch  slam_gmapping.xml  static_tf.launch  test_finish.launch
roborts_bringup/maps/: ICRA.pgm  ICRA.yaml  RMUA_2020.yaml  RMUL.pgm  RMUL.yaml  icra_map.pgm  icra_map.yaml  mymap.yaml
roborts_bringup/rviz/: test_finish.rviz
roborts_bringup/worlds/: WorldWithFourCamera.world
roborts_costmap/: CMakeLists.txt
roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt.bk  dynamic_obstacle_layer_config.prototxt  inflation_layer_config.prototxt  obstacle_layer_config.prototxt  static_layer_config.prototxt
roborts_costmap/src/: dynamic_obstacle_layer.cpp  static_layer.cpp
roborts_decision/: CMakeLists.txt  blue_master.cpp  blue_wing.cpp  decision_node.cpp  package.xml  red_master.cpp  red_wing.cpp  referee_system_node.cpp  rmul_behavior_node.cpp  sel_behavior_node.cpp  single_robot.cpp  test_behavior.cpp
roborts_decision/action_node/: speech_area.h
roborts_decision/behavior_tree/: behavior_node.h
roborts_decision/blackboard/: blackboard.h  communication.h
roborts_decision/chong/: CMakeLists.txt  package.xml
roborts_decision/chong/msg/: Speech.msg
roborts_decision/chong/src/: xiaochong.cpp
roborts_decision/config/: blue_master.prototxt  blue_wing.prototxt  decision.prototxt  red_master.prototxt  red_wing.prototxt  rmua_decision.protoxt  rmul_behave.protoxt  sel_behave.prototxt  test_behave.protoxt
roborts_decision/example_behavior/: ambush_behavior.h  attack_behavior.h  back_boot_area_behavior.h  chase_behavior.h  defense_behavior.h  escape_behavior.h  nn_behavior.h  reload_behavior.h  search_behavior.h  sentry_behavior.h  shield_behavior.h  test_behavior.h
roborts_decision/include/: goal_factory.h
roborts_decision/launch/: loadparam_test.launch
roborts_decision/proto/: decision.pb.cc  decision.pb.h  decision.proto
roborts_decision/roborts_base/config/: roborts_base_parameter.yaml
roborts_decision/roborts_bringup/launch/: mapping.launch  static_tf.launch  test_finish.launch
roborts_decision/roborts_costmap/config/: costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt
roborts_decision/roborts_decision/: CMakeLists.txt  behavior_test.cpp  icra_decision_node.cpp
roborts_decision/roborts_decision/action_node/: ChassisLimited.h  SearchAction.h
roborts_decision/roborts_decision/config/: topic_name.prototxt
roborts_decision/roborts_localization/config/: localization.yaml
roborts_decision/roborts_planning/local_planner/src/: local_planner_node.cpp  odom_info.cpp  vel_converter.cpp
roborts_decision/roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
roborts_decision/roborts_planning/local_planner/timed_elastic_band/src/: teb_local_planner.cpp
roborts_decision/ydlidar_ros_driver-master/launch/: X4.launch  lidar.launch
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: Aimtargeid.msg  ArmorsPos.msg  SwingMode.msg
roborts_planning/global_planner/: global_planner_node.cpp
(+20 files in other folders)
